<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/toolbar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/Contactname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contacts_name"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/tv_contacts_name"
                android:layout_toRightOf="@+id/Contactname"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/contacts_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_number"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="Number"
                android:ems="10"
                android:id="@+id/tv_contacts_num"
                android:layout_toRightOf="@+id/contacts_num"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/Contacts_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contacts_ID"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="Number"
                android:ems="10"
                android:id="@+id/tv_contacts_ID"
                android:layout_toRightOf="@+id/Contacts_ID"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
    </LinearLayout>

    <Button
        android:id="@+id/add_contacts_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:textSize="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="#808080"
        android:background="@drawable/button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>