<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <include layout="@layout/toolbar_title" />
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_name"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tv_address_name"
                android:layout_toRightOf="@+id/address_name"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/address_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_number"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/tv_address_num"
                android:layout_toRightOf="@+id/address_num"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/address_post_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:text="@string/address_post_number"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/tv_address_post_number"
                android:layout_toRightOf="@+id/address_post_number"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/address_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_district"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/tv_address_district"
                android:layout_toRightOf="@+id/address_district"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03">
            <TextView
                android:id="@+id/address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_detail"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/tv_address_detail"
                android:layout_toRightOf="@+id/address_detail"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#dddddd"
            />
    </LinearLayout>

    <Button
        android:id="@+id/add_address_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:textSize="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="#fff"
        android:background="@drawable/button"
        style="?android:attr/borderlessButtonStyle"

        android:layout_gravity="center_horizontal"/>
</LinearLayout>